# voker-assestment

./: LICENSE  README.md
backend/: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
backend/app/: api.py
backend/app/tests/: test_api.py
frontend/: README.md
frontend/src/: App.svelte
