[project]
name = "voker"
version = "0.1.0"
description = "Voker AI Assestment"
authors = [
    {name = "Kostix Baidush",email = "kostixaid@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
openai = "^0.28.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
